# lsre

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.cursor/rules/: always-use-uv.mdc
.devcontainer/: .p10k.zsh  .zshrc  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/workflows/: docs-deployment.yml  pr-checks.yml  release.yml
configs/: config.yaml
configs/logger/: logger.yaml
docs/: index.md
docs/getting-started/: how-to-develop.md  project-setup.md  release-package.md  template-update.md  vm-setup.md
docs/guides/: how-to-develop.md  release-package.md  useful-commands.md
notebooks/: hello.py  tutorial.py
scripts/: __init__.py  main.py
src/lsre/: __init__.py  module.py  regex_functions.py  utils.py
src/sample_python_project/: __init__.py
tests/: test_module.py  test_regex_functions.py  test_utils.py
tools/: __init__.py  gen_ref_pages.py
