[project]
name = "lsre"
version = "0.1.0"
description = "A project to learn simple regular expressions."
readme = "README.md"
authors = [
    { name = "Rohit Gupta", email = "gupta.rohit21198@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = [
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
    "pyright>=1.1.397",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.6",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.9",
    "pre-commit>=4.2.0",
    "marimo>=0.14.16",
    "mkdocs-mermaid2-plugin>=1.2.1",
]

[tool.ruff]
line-length = 79
show-fixes = true
unsafe-fixes = true
exclude = ["scratchpad", "notebooks"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # redundant, ruff enforces consistent use of trailing commas
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG", # unused function args in tests
    "FBT", # booleans as positional arguments in tests
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-fail-under=100",
    "--durations=0",
    "--durations-min=0.5",
    "--doctest-modules",
]

[tool.coverage.run]
omit = []

[tool.pyright]
venvPath = "."
venv = ".venv"
ignore = ["scratchpad", "notebooks"]
